src/test/deca/syntax/parser/invalid/decl_var_wrong_equal_number.deca
// Parser test, special character (=) replaced by a number

{
    int x 14 5;
}